tests/errors/mixed_arithmetic_u32_i32.orus
fn main() {
    let x: u32 = 10
    let y: i32 = 20
    let z = x + y
}
